<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item android:id="@+id/menu_search"
          android:title="@string/menu_search"
          android:icon="@android:drawable/ic_menu_search"
          android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView"/>

   <item android:id="@+id/menu_vocal_search"
          android:title="@string/menu_search"
          android:icon="@android:drawable/ic_btn_speak_now"
          android:showAsAction="always"/>
       
    <item android:id="@+id/menu_focus"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/menu_focus"
          android:showAsAction="ifRoom|collapseActionView"/> 
         <!--  android:onClick="onFocusClick"/> -->
    
    <item android:id="@+id/menu_list"
          android:icon="@android:drawable/ic_menu_myplaces"
          android:title="@string/menu_list"
          android:showAsAction="ifRoom|collapseActionView"/> 
         <!-- android:onClick="onListClick" /> -->
    
    <item android:id="@+id/menu_prefs"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/menu_prefs"
          android:showAsAction="ifRoom|collapseActionView" />
    
    <item android:id="@+id/menu_about"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/apropos_menu"
          android:showAsAction="ifRoom|collapseActionView" />
    
</menu>